; ModuleID = '/home/carl/AnghaBench/libevent/test/extr_tinytest_demo.c_main.c'
source_filename = "/home/carl/AnghaBench/libevent/test/extr_tinytest_demo.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@aliases = common dso_local global i32 0, align 4
@groups = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %6 = load i32, i32* @aliases, align 4
  %7 = call i32 @tinytest_set_aliases(i32 %6)
  %8 = load i32, i32* %4, align 4
  %9 = load i8**, i8*** %5, align 8
  %10 = load i32, i32* @groups, align 4
  %11 = call i32 @tinytest_main(i32 %8, i8** %9, i32 %10)
  ret i32 %11
}

declare dso_local i32 @tinytest_set_aliases(i32) #1

declare dso_local i32 @tinytest_main(i32, i8**, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
